fixed webkit-search-cancel button image not showing

--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,7 @@ header {
 .search-bar-input::-webkit-search-cancel-button {
     margin-right: 0.75em;
     -webkit-appearance: none;
-    content: URL(./assets/Close-Icon.png);
+    content: URL('/assets/Close-Icon.png');
     width: 1em;
     cursor: pointer;
 }
